"""Snapshot tests for CompactDisplayHandler."""

from __future__ import annotations

import json
from io import StringIO
from pathlib import Path
from typing import cast

import pytest
import pytest_bazel
from mcp.types import Implementation, InitializeResult, ServerCapabilities
from pydantic import BaseModel
from rich.console import Console
from syrupy.assertion import SnapshotAssertion

from agent_core.events import ToolCall, ToolCallOutput
from agent_core.tool_provider import ToolResult
from mcp_infra.display.rich_display import CompactDisplayHandler
from mcp_infra.exec.docker.server import ContainerExecServer, _make_exec_input_model
from mcp_infra.exec.docker.types import DefaultValue
from mcp_infra.exec.models import BaseExecResult, Exited
from mcp_infra.naming import build_mcp_function
from mcp_infra.prefix import MCPMountPrefix

# Dynamic model matching a server with all fields enabled
_TestExecInput: type[BaseModel] = _make_exec_input_model(
    allow_user=True, allow_env=True, cwd_policy=DefaultValue(value=Path("/test/workspace"))
)


def render_handler_to_string(call: ToolCall, output: ToolCallOutput, prefix: str = "Agent") -> str:
    """Helper to render CompactDisplayHandler events to string.

    Simulates the sequence: tool call -> tool output.
    """
    out = StringIO()
    console = Console(file=out, width=80, legacy_windows=False, color_system=None)

    # Register tool schemas so the handler can recognize _TestExecInput/BaseExecResult
    # Use tuple keys (MCPMountPrefix, tool_name) as expected by CompactDisplayHandler
    tool_input_schemas: dict[tuple[MCPMountPrefix, str], type[BaseModel]] = {
        (ContainerExecServer.RUNTIME_MOUNT_PREFIX, ContainerExecServer.EXEC_TOOL_NAME): cast(
            type[BaseModel], _TestExecInput
        )
    }
    tool_schemas: dict[tuple[MCPMountPrefix, str], type[BaseModel]] = {
        (ContainerExecServer.RUNTIME_MOUNT_PREFIX, ContainerExecServer.EXEC_TOOL_NAME): cast(
            type[BaseModel], BaseExecResult
        )
    }

    # Create handler with the console and schemas
    test_handler = CompactDisplayHandler(max_lines=20, console=console, prefix=prefix, show_token_usage=False)
    test_handler._tool_input_schemas = tool_input_schemas
    test_handler._tool_schemas = tool_schemas

    # Feed events in order
    test_handler.on_tool_call_event(call)
    test_handler.on_tool_result_event(output)

    return out.getvalue()


@pytest.mark.parametrize(
    "cmd",
    [
        pytest.param(["bash", "-c", "ls -la /test/workspace"], id="bash_-c"),
        pytest.param(["ruff", "check", "/test/workspace"], id="non_wrapped"),
        pytest.param(["python", "-c", "print('hello world')"], id="non_wrapped_spaces"),
    ],
)
def test_docker_exec_shell_unwrapping_snapshot(snapshot: SnapshotAssertion, call_id_gen, cmd: list[str]):
    """Snapshot test for docker exec command display with shell unwrapping.

    Tests the _unwrap_shell_command() logic for various shell wrappers.
    """
    exec_input = _TestExecInput(cmd=cmd, cwd="/test/workspace", env=None, user=None, timeout_ms=30000)

    call = ToolCall(
        name=build_mcp_function(ContainerExecServer.RUNTIME_MOUNT_PREFIX, ContainerExecServer.EXEC_TOOL_NAME),
        args_json=json.dumps(exec_input.model_dump()),
        call_id=call_id_gen(),
    )

    exec_result = BaseExecResult(
        exit=Exited(exit_code=0), stdout="output text\nsecond line\n", stderr="", duration_ms=125
    )

    output = ToolCallOutput(
        call_id=call.call_id, result=ToolResult(content=[], structured_content=exec_result.model_dump(), is_error=False)
    )

    rendered = render_handler_to_string(call, output)

    assert rendered == snapshot


# CompactDisplayHandler serialization tests (Pydantic Url/AnyUrl handling)


def test_compact_display_handler_with_anyurl_in_result():
    """Test that CompactDisplayHandler handles tool results with AnyUrl correctly.

    This reproduces the original bug: InitializeResult contains serverInfo.url (AnyUrl),
    and without mode='json', serialization would fail.
    """

    # Create a realistic MCP InitializeResult - this is what would come back from an MCP server
    # The serverInfo.url field is Optional[AnyUrl], which caused the original bug
    init_result = InitializeResult(
        protocolVersion="2024-11-05",
        capabilities=ServerCapabilities(),
        serverInfo=Implementation(name="test-server", version="1.0.0"),
    )

    # The bug was: when we try to dump this without mode="json", it contains Url objects
    # that can't be serialized by json.dumps() or compact_json Formatter
    dumped_without_mode = init_result.model_dump()  # This would have Url objects

    # Now create a ToolResult with this as structured content (simulating a tool returning it)
    result = ToolResult(structured_content=dumped_without_mode, is_error=False, content=[])

    # Create handler with a StringIO console to capture output
    output_buffer = StringIO()
    console = Console(file=output_buffer, force_terminal=False, width=120)
    handler = CompactDisplayHandler(max_lines=20, console=console, servers=None, show_token_usage=False)

    # Create a fake tool call and output event

    call = ToolCall(call_id="test-123", name="mcp_initialize", args_json="{}")
    handler._calls["test-123"] = call

    output = ToolCallOutput(call_id="test-123", result=result)

    # This used to raise "TypeError: Object of type Url is not JSON serializable"
    # Now it should work because the handler uses to_jsonable_python()
    handler.on_tool_result_event(output)
    output_text = output_buffer.getvalue()

    # Should have produced some output
    assert len(output_text) > 0, "Handler should have produced output"
    # Should contain the server name
    assert "test-server" in output_text, f"Output should contain server name, got: {output_text}"


if __name__ == "__main__":
    pytest_bazel.main()
