# serializer version: 1
# name: test_docker_exec_shell_unwrapping_snapshot[bash_-c]
  '''
  ● Agent: runtime_exec: ls -la /test/workspace  [cwd=/test/workspace]
    ⎿ exit_code=0  duration=0.1s
    output text
    second line
  
  '''
# ---
# name: test_docker_exec_shell_unwrapping_snapshot[non_wrapped]
  '''
  ● Agent: runtime_exec: ruff check /test/workspace  [cwd=/test/workspace]
    ⎿ exit_code=0  duration=0.1s
    output text
    second line
  
  '''
# ---
# name: test_docker_exec_shell_unwrapping_snapshot[non_wrapped_spaces]
  '''
  ● Agent: runtime_exec: python -c 'print('"'"'hello world'"'"')'  
  [cwd=/test/workspace]
    ⎿ exit_code=0  duration=0.1s
    output text
    second line
  
  '''
# ---
